# zenthos

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  spec.md
.cargo/: config.toml
apps/ota/: Cargo.toml  README.md
apps/ota/infra/: docker-compose.yaml  loki.yaml  otel-colector.yaml  prometheus.yaml  tempo.yaml
apps/ota/src/: lib.rs  main.rs  metrics.rs  openapi.rs  router.rs
apps/ota/src/routes/: firmware.rs  health.rs  mod.rs
apps/ota/src/routes/v1/: firmware.rs  health.rs
firmware/raspberry_pi_2040/: Cargo.toml
