[package]
name = "ota"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.0"
opentelemetry-stdout = { version = "0.30.0", features = ["logs", "trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["logs"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
] }
