[package]
name = "ota"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-stdout = { version = "0.31.0", features = ["logs", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["logs"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic", "zstd-tonic"] }
